<resources>
    <string name="app_name">Kotlin Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="register">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chat_rooms">Chat Rooms</string>
    <string name="my_friends">My Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="profile">My Profile</string>
    <string name="Settings">Settings</string>
    <string name="log_out">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_room_title">Chat Room Title</string>
    <string name="type_message">Type message</string>
    <string name="send">SEND</string>
    <string name="message_name">message name</string>
    <string name="message_body">hi man, how are you?</string>
</resources>
