<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_menu_chats"
        android:title="@string/chat_rooms" />
    <item
        android:id="@+id/nav_my_friends"
        android:icon="@drawable/ic_menu_my_friends"
        android:title="@string/my_friends" />
    <item
        android:id="@+id/nav_add_friends"
        android:icon="@drawable/ic_menu_add_friend"
        android:title="@string/add_friends" />

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/Settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
