<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragments.SignupFragment"
    android:background="@android:color/holo_red_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:drawableEnd="@drawable/ic_person_white"
            android:drawableRight="@drawable/ic_person_white"
            android:drawablePadding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/dark_rect_background"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:drawableEnd="@drawable/ic_mail_white"
            android:drawableRight="@drawable/ic_mail_white"
            android:drawablePadding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/dark_rect_background"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="end"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_lock_white"
            android:drawableRight="@drawable/ic_lock_white"
            android:drawablePadding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:background="@drawable/dark_rect_background"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/dark_rect_background"
            android:layout_gravity="start"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"/>

        <ProgressBar
            android:id="@+id/prgs_loading"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>