<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"/>
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:drawableEnd="@drawable/ic_mail"
            android:drawableRight="@drawable/ic_mail"
            android:drawablePadding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_rect_background"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:gravity="end"
            android:hint="@string/password"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/white_rect_background"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:background="@drawable/white_rect_background"
            android:layout_gravity="start"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"/>

        <ProgressBar
            android:id="@+id/prgs_loading"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:visibility="invisible"/>
    </LinearLayout>
</ScrollView>